--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,49 +9,51 @@ services:
       - "8083:8083"     # MQTT sobre WebSocket (sin TLS)
       - "8084:8084"     # MQTT sobre WebSocket (TLS)
       - "18083:18083"   # Dashboard web
-    networks:
-      - windfarm_net
-
-  mongo:
-    image: mongo:latest
-    container_name: mongo_windfarm
-    ports:
-      - "27017:27017"
     volumes:
-      - mongo_data:/data/db
+       - ./EMQX/data:/opt/emqx/data
     networks:
       - windfarm_net
 
-  simulator:
-    build:
-      context: .
-      dockerfile: python.Dockerfile
-    container_name: windfarm_simulator
-    command: python -m TurbineTelemetry.main
-    depends_on:
-      - emqx
-    environment:
-      # El host del broker es el nombre del servicio 'emqx'
-      - MQTT_BROKER_HOST=emqx
-    networks:
-      - windfarm_net
+  # mongo:
+  #   image: mongo:latest
+  #   container_name: mongo_windfarm
+  #   ports:
+  #     - "27017:27017"
+  #   volumes:
+  #     - mongo_data:/data/db
+  #   networks:
+  #     - windfarm_net
 
-  statnode:
-    build:
-      context: .
-      dockerfile: python.Dockerfile
-    container_name: windfarm_statnode
-    command: python -m StatNode.main # Usaremos un nuevo main.py
-    depends_on:
-      - emqx
-      - mongo
-    environment:
-      # El host del broker es el nombre del servicio 'emqx'
-      - MQTT_BROKER_HOST=emqx
-      # La URI de mongo apunta al servicio 'mongo'
-      - MONGO_URI=mongodb://mongo:27017
-    networks:
-      - windfarm_net
+  # simulator:
+  #   build:
+  #     context: .
+  #     dockerfile: python.Dockerfile
+  #   container_name: windfarm_simulator
+  #   command: python -m TurbineTelemetry.main
+  #   depends_on:
+  #     - emqx
+  #   environment:
+  #     # El host del broker es el nombre del servicio 'emqx'
+  #     - MQTT_BROKER_HOST=emqx
+  #   networks:
+  #     - windfarm_net
+
+  # statnode:
+  #   build:
+  #     context: .
+  #     dockerfile: python.Dockerfile
+  #   container_name: windfarm_statnode
+  #   command: python -m StatNode.main # Usaremos un nuevo main.py
+  #   depends_on:
+  #     - emqx
+  #     - mongo
+  #   environment:
+  #     # El host del broker es el nombre del servicio 'emqx'
+  #     - MQTT_BROKER_HOST=emqx
+  #     # La URI de mongo apunta al servicio 'mongo'
+  #     - MONGO_URI=mongodb://mongo:27017
+  #   networks:
+  #     - windfarm_net
 
 networks:
   windfarm_net:
