--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,31 +55,16 @@ services:
 
   frontend_debugger:
     build:
-      context: .
-      dockerfile: python.Dockerfile
+      context: ./FrontendNode # Apuntamos al directorio del frontend
+      dockerfile: Dockerfile # Asumimos/creamos un Dockerfile aquí
     container_name: windfarm_frontend_debugger
-    command: python -m StatNode.debug_client
-    depends_on:
-      - emqx
-    environment:
-      - MQTT_BROKER_HOST=emqx
+    # El comando ahora instala dependencias y corre el dev server
+    command: sh -c "npm install && npm run dev"
+    ports:
+      - "8080:8080" # Exponemos el puerto 8080 definido en vite.config.ts
     networks:
       - windfarm_net
 
-  frontend:
-    build:
-      context: .
-      dockerfile: frontend.Dockerfile
-    container_name: windfarm_frontend
-    ports:
-      # Mapea el puerto 8080 de tu máquina al puerto 80 del contenedor Nginx
-      - "8080:80"
-    env_file:
-      - .env.frontend
-    depends_on:
-      - emqx # Asegura que el broker inicie antes, aunque la conexión es desde el navegador.
-    networks:
-      - windfarm_net
 networks:
   windfarm_net:
     driver: bridge
