--- a/EMQX/data/configs/app.2025.11.07.18.03.02.config
+++ b/EMQX/data/configs/app.2025.11.07.18.03.02.config
@@ -76,8 +76,8 @@
                           {fun logger_filters:progress/2,stop}}],
                  formatter =>
                      {emqx_logger_textfmt,
-                         #{time_offset => [],single_line => true,
-                           chars_limit => unlimited,depth => 100,
+                         #{time_offset => [],chars_limit => unlimited,
+                           depth => 100,single_line => true,
                            template => ["[",level,"] ",msg,"\n"],
                            payload_encode => text,
                            timestamp_format => auto}}}}]},
