--- a/EMQX/data/configs/app.2025.11.08.17.35.18.config
+++ b/EMQX/data/configs/app.2025.11.08.17.35.18.config
@@ -76,8 +76,8 @@
                           {fun logger_filters:progress/2,stop}}],
                  formatter =>
                      {emqx_logger_textfmt,
-                         #{time_offset => [],chars_limit => unlimited,
-                           depth => 100,single_line => true,
+                         #{time_offset => [],depth => 100,single_line => true,
+                           chars_limit => unlimited,
                            template => ["[",level,"] ",msg,"\n"],
                            payload_encode => text,
                            timestamp_format => auto}}}}]},
