--- a/StatNode/Dockerfile
+++ b/StatNode/Dockerfile
@@ -2,7 +2,7 @@
 
 FROM python:3.8-slim-buster
 
-WORKDIR /flask_backend
+WORKDIR /StatNode
 
 COPY requirements.txt requirements.txt
 RUN pip3 install -r requirements.txt
