JWT Auth Avance Falta: Config ACLs por roles, agregar usuarios a usar en seeds, pulir docker-compose y peticiones de resto de servicios a AuthNode.

--- a/EMQX/data/configs/app.2025.11.12.22.12.11.config
+++ b/EMQX/data/configs/app.2025.11.12.22.12.11.config
@@ -76,8 +76,8 @@
                           {fun logger_filters:progress/2,stop}}],
                  formatter =>
                      {emqx_logger_textfmt,
-                         #{time_offset => [],chars_limit => unlimited,
-                           depth => 100,single_line => true,
+                         #{time_offset => [],single_line => true,depth => 100,
+                           chars_limit => unlimited,
                            template => ["[",level,"] ",msg,"\n"],
                            payload_encode => text,
                            timestamp_format => auto}}}}]},
