--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,18 +14,27 @@ services:
     networks:
       - windfarm_net
 
-  # auth_node:
-  #     build: 
-  #       context: ./AuthNode   # carpeta base del proyecto Flask
-  #       dockerfile: Dockerfile
-  #     container_name: flask_api_auth
-  #     ports:
-  #       - "5000:5000" 
-  #     environment:
-  #       - FLASK_APP=server.py
-  #       - FLASK_ENV=development
-
-  mongo:
+  auth_node:
+    build: 
+      context: .   # carpeta base del proyecto Flask
+      dockerfile: ./AuthNode/Dockerfile
+    container_name: flask_api_auth
+    ports:
+      - "5001:5001" 
+    environment:
+      - JWT_SECRET=testing_secret_key
+      - JWT_ALGORITHM=HS256
+      - JWT_TTL=3600
+      - DEFAULT_SEED_PASSWORD=MiPassComun123
+      - MONGO_URI=mongodb://mongo_auth:27017 # nombre contenedor 
+      - MONGO_DB_NAME=test_db 
+      - CLEAN_DB_ON_STARTUP=true # limpiar bd al inicio para ejecutar seeds
+    depends_on:
+      - mongo_auth
+    networks:
+      - windfarm_net
+        
+  mongo_windfarm:
     image: mongo:latest
     container_name: mongo_windfarm
     ports:
@@ -35,40 +44,73 @@ services:
     networks:
       - windfarm_net
 
-  simulator:
-    build:
-      context: .
-      dockerfile: python.Dockerfile
-    container_name: windfarm_simulator
-    command: python -m TurbineTelemetry.main
-    depends_on:
-      - emqx
-    environment:
-      # El host del broker es el nombre del servicio 'emqx'
-      - MQTT_BROKER_HOST=emqx
-    networks:
-      - windfarm_net
-      
-  statnode:
-    build:
-      context: .                     # raíz del repo
-      dockerfile: ./StatNode/Dockerfile
-    container_name: windfarm_statnode
-    depends_on:
-      - emqx
-      - mongo
-    environment:
-      - MQTT_BROKER_HOST=emqx
-      - MONGO_URI=mongodb://mongo:27017
-    env_file:
-      - ./StatNode/.env
+  mongo_auth:
+    image: mongo:latest
+    container_name: mongo_auth
     ports:
-      - "5000:5000"
+      - "28000:27017"
+    volumes:
+      - mongo_data_auth:/data/db
     networks:
       - windfarm_net
-  
+    
 
+  # simulator:
+  #   build:
+  #     context: .
+  #     dockerfile: python.Dockerfile
+  #   container_name: windfarm_simulator
+  #   command: python -m TurbineTelemetry.main
+  #   depends_on:
+  #     - emqx
+  #   environment:
+  #     # El host del broker es el nombre del servicio 'emqx'
+  #     - MQTT_BROKER_HOST=emqx
+  #   networks:
+  #     - windfarm_net
+      
+  # statnode:
+  #   build:
+  #     context: .                     # raíz del repo
+  #     dockerfile: ./StatNode/Dockerfile
+  #   container_name: windfarm_statnode
+  #   depends_on:
+  #     - emqx
+  #     - mongo
+  #   environment:
+  #     - MQTT_BROKER_HOST=emqx
+  #     - MONGO_URI=mongodb://mongo_windfarm:27017
+  #   env_file:
+  #     - ./StatNode/.env
+  #   ports:
+  #     - "5000:5000"
+  #   networks:
+  #     - windfarm_net
+  
   # frontend_debugger:
+  #   build:
+  #     context: ./FrontendNode
+  #     dockerfile: Dockerfile
+  #   container_name: windfarm_frontend_debugger
+  #   ports:
+  #     - "8080:8080"
+  #   networks:
+  #     - windfarm_net
+
+
+networks:
+  windfarm_net:
+    driver: bridge
+
+volumes:
+  mongo_data:
+  mongo_data_auth:
+
+
+### -------------
+
+
+# frontend_debugger:
   #   build:
   #     context: ./FrontendNode # Apuntamos al directorio del frontend
   #     dockerfile: Dockerfile # Asumimos/creamos un Dockerfile aquí
@@ -79,20 +121,3 @@ services:
   #     - "8080:8080" # Exponemos el puerto 8080 definido en vite.config.ts
   #   networks:
   #     - windfarm_net
-  frontend_debugger:
-    build:
-      context: ./FrontendNode
-      dockerfile: Dockerfile
-    container_name: windfarm_frontend_debugger
-    ports:
-      - "8080:8080"
-    networks:
-      - windfarm_net
-
-
-networks:
-  windfarm_net:
-    driver: bridge
-
-volumes:
-  mongo_data:
