creada carpeta mongoFiles. Implementado script de generacion de dataset, y modificado el docker-compose para que mongo cargue el dataset. Se agrego dataset.json dado que el script no tarda en generar el dataset, y pesa mucho como para subirlo siempre. Su uso en docker mplica hacer un prune para borrar volumenes anteriores

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,9 @@ services:
   #       - FLASK_ENV=development
 
   mongo:
-    image: mongo:latest
+    build:
+      context: .              # Contexto en la raíz (donde están dataset.json e init-mongo.js)
+      dockerfile: mongoFiles/Dockerfile  # Ruta al Dockerfile
     container_name: mongo_windfarm
     ports:
       - "27017:27017"
