Se implementaron cambios necesarios para crear una replica del nodo stats, y una replica del nodo mongo
mongoFiles/init-mongo.sh text eol=lf
Se implemento un fix en el archivo init-mongo.sh para que sea un archivo
interpretable por unix y no haya problemas al cargarlo en el contenedor

--- a/AuthNode/Dockerfile
+++ b/AuthNode/Dockerfile
@@ -2,17 +2,17 @@
 
 FROM python:3.8-slim-buster
 
-WORKDIR /AuthNode
+WORKDIR /app
 
-COPY AuthNode/requirements.txt ./requirements.txt
-RUN pip3 install --no-cache-dir -r requirements.txt
+COPY AuthNode/requirements.txt ./AuthNode/requirements.txt
+RUN pip3 install --no-cache-dir -r ./AuthNode/requirements.txt
 
 # Copia codigo fuente
-COPY AuthNode/ ./         
-COPY Shared/ /Shared/
+COPY AuthNode/ ./AuthNode/
+COPY Shared/ ./Shared/
 
-ENV PYTHONPATH="/:/AuthNode:${PYTHONPATH}"
-ENV FLASK_APP=server
+ENV PYTHONPATH="/app:${PYTHONPATH}"
+ENV FLASK_APP=AuthNode.server
 ENV FLASK_ENV=development
 
 EXPOSE 5001
