--- a/mongoFiles/Dockerfile
+++ b/mongoFiles/Dockerfile
@@ -1,4 +1,4 @@
-FROM mongo:latest
+# FROM mongo:latest
 
-COPY mongoFiles/dataset.json /dataset.json
-COPY mongoFiles/init-mongo.sh /docker-entrypoint-initdb.d/01-import.sh
+# COPY mongoFiles/dataset.json /dataset.json
+# COPY mongoFiles/init-mongo.sh /docker-entrypoint-initdb.d/01-import.sh
