--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -84,6 +84,9 @@ services:
       - MONGO_URIS=mongodb://mongo_windfarm:27017,mongodb://mongo_windfarm_replica:27017
       - STATNODE_ROLE=primary # <-- ROL PRIMARIO
       - FLASK_INTERNAL_PORT=5000
+      - EMQX_API_URL=http://emqx:18083
+      - EMQX_API_USER=admin
+      - EMQX_API_PASSWORD=public
     env_file:
       - ./StatNode/.env
     ports:
@@ -105,6 +108,9 @@ services:
       - MONGO_URIS=mongodb://mongo_windfarm:27017,mongodb://mongo_windfarm_replica:27017
       - STATNODE_ROLE=replica # <-- ROL DE RÉPLICA
       - FLASK_INTERNAL_PORT=5000
+      - EMQX_API_URL=http://emqx:18083
+      - EMQX_API_USER=admin
+      - EMQX_API_PASSWORD=public
     env_file:
       - ./StatNode/.env
     ports:
